test/files/pos/ambiguous-same/p.scala

package p
object X {
  val x = 42
}
