test/files/neg/t4537/b.scala
package b

object Settings {
  val Y = 0
}